<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">Quizz</string>

    <!-- Activity name -->
    <string name="title_activity_jouer">Quizz</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_game_mode">GameModeActivity</string>
    <string name="title_activity_choice_score">Evolution Score</string>
    <string name="title_activity_score_classique">Evolution Classique</string>
    <string name="title_activity_score_theme">Evolution par thème</string>
    <string name="title_activity_score_all">Toutes les évolutions</string>
    
    
    <!-- TextView name -->
    <string name="title_evolution">Evolution du 00-00-00 au 00-00-00</string>
    <string name="title_legendeEvolution">Légende : </string>
    <string name="lesscores">Les scores</string>

    <!-- Menu -->
    <string name="logo_alt">Quizz logo</string>
    <string name="jouer_button">Jouer</string>
    <string name="option_button">Options</string>
    <string name="quitter_button">Quitter</string>
    <string name="menu_button">Menu</string>
    <string name="history_button">Game history</string>
    <string name="save_button">Save</string>
    <string name="score_button">Evolution Score</string>
    <string name="tous_button">Tous</string>
    <string name="classique_button">Classique</string>
    <string name="bytheme_button">Theme</string>
    <string name="cours_button">Cours</string>

    <!--  Game Mode Menu -->
    <string name="mode_classique">Classique</string>
    <string name="mode_theme">Theme</string>
    <string name="mode_ameliore">Ameliore</string>
    <string name="retour">Retour</string>
    
    <!-- Timer -->
    <string name="timer">30</string>
    <string name="plusinfo">Informations</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
