<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_gravity="center"
    tools:context="fr.utbm.tx.quizz.MainActivity" >

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:layout_marginLeft="10dp"
	    android:layout_marginRight="10dp"
	    android:gravity="center"
		tools:context="fr.utbm.tx.quizz.MainActivity"
		android:weightSum="1"
		android:orientation="vertical">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginBottom="55dp"
            android:contentDescription="@string/logo_alt"
            android:src="@drawable/logo"
			android:id="@+id/imageView" />

        <Button
            android:id="@+id/btn_play"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/jouer_button"
            android:background="@drawable/button_menu"
            style="@style/button_text" android:textColor="#ffffff"
			android:layout_weight="0.45" />
		<!-- android:textColorHint="@color/hint_foreground_material_light" -->

		<Button
          android:id="@+id/btn_score"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/score_button"
          android:background="@drawable/button_menu"
          style="@style/button_text" android:textColor="#ffffff" />

		<Button
	        android:id="@+id/btn_quit"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/quitter_button"
	        android:background="@drawable/button_menu"
	        style="@style/button_text" />


	</LinearLayout>
	
	</ScrollView>
