<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.utbm.tx.quizz.ChoiceScoreActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_tous"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:text="@string/tous_button" />
        
        <Button
            android:id="@+id/btn_classique_m"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:text="@string/classique_button" />
        
        <Button
            android:id="@+id/btn_partheme"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:text="@string/bytheme_button" />

        <View
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="1.5dp"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/btn_retour"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_menu"
            android:text="@string/retour" />

    </LinearLayout>

</ScrollView>
